# TxConverter

./: Dockerfile  README.md  build.sh  entrypoint.sh  lint.sh  pipeline.sh  pyproject.toml  start.sh  test.sh
infra/: config.py  local.toml  prod.toml  test.toml
src/txconverter/: main.py
src/txconverter/api/common/: pagination.py
src/txconverter/api/common/schemas/: requests.py
src/txconverter/api/internal/mappers/: currencies.py
src/txconverter/api/internal/routers/: currencies.py
src/txconverter/api/internal/schemas/: currencies.py
src/txconverter/api/internal/use_cases/: currencies.py
src/txconverter/api/public/mappers/: transactions.py
src/txconverter/api/public/routers/: transactions.py
src/txconverter/api/public/schemas/: transactions.py
src/txconverter/api/public/use_cases/: transactions.py
src/txconverter/cache/: rates.py
src/txconverter/constants/: base.py  base_codes.py  conversions.py  currencies.py
src/txconverter/constants/purchase_transactions/: base.py  codes.py
src/txconverter/exceptions/: base.py  conversions.py  currencies.py  transactions.py
src/txconverter/infra/: id_generator.py  logging.py  resource_limits.py
src/txconverter/infra/api/: response_builder.py
src/txconverter/infra/clients/: treasury_client.py  treasury_errors.py
src/txconverter/models/: conversions_model.py  currencies_model.py  transactions_model.py
src/txconverter/repository/: transactions_repository.py
src/txconverter/services/: amounts_handler.py  conversions_handler.py  currencies_service.py  transactions_service.py
tests/e2e/: conftest.py
(+12 files in other folders)
