[project]
name = "txconverter"
version = "0.1.0"
description = ""
authors = [
    {name = "Paulo"}
]
requires-python = "==3.10.16"
dependencies = [
    "fastapi[standard] (>=0.136.1,<0.137.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "sonyflake-py (>=1.3.0,<2.0.0)",
    "dynaconf (>=3.2.13,<4.0.0)",
    "snowflake-id (>=1.0.2,<2.0.0)",
    "requests (>=2.34.2,<3.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "portalocker (>=2.10.1,<3.0.0)",
    "psutil (>=6.0.0,<7.0.0)",
    "httpx (>=0.28.1,<1.0.0)",
    "ijson (>=3.3.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
httpx = "^0.28.1"
ruff = "^0.15.14"
pytest-cov = "^7.1.0"

